# malda-zk-coprocessor

./: Cargo.toml  README.md  licensing.md  notice.md
malda_rs/: Cargo.toml  README.md
malda_rs/src/: constants.rs  elfs_ids.rs  lib.rs  viewcalls.rs  viewcalls_ethereum_light_client.rs
malda_rs/tests/: tests.rs
malda_utils/: Cargo.toml
malda_utils/src/: constants.rs  cryptography.rs  lib.rs  types.rs  validators.rs  validators_ethereum_light_client.rs
methods/: Cargo.toml  build.rs  parallel_benchmark.txt
methods/guest/: Cargo.toml  README.md
methods/src/: lib.rs
patch/ethereum_hashing/: Cargo.toml
patch/ethereum_hashing/src/: lib.rs  sha2_impl.rs
sequencer/: Cargo.toml  nohup.out
sequencer/src/: batch_event_listener.rs  batch_manager.rs  constants.rs  event_listener.rs  event_processor.rs  events.rs  lib.rs  main.rs  proof_generator.rs  transaction_manager.rs  types.rs
sequencer/src/logger/: mod.rs
