[package]
name = "sequencer"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
url = { version = "2.5" }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

eyre = "0.6"

serde_json = "1.0"

alloy = {version = "0.6.4", features = [
    "providers",
    # "full",
    "rpc-types",
    # "provider-debug-api",
    # "sol-types",
    "provider-ws",
    "signers",
    "node-bindings",
    "signer-local",

] }
futures-util = "0.3"
malda_rs = { path = "../malda_rs" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
dotenvy = "0.15"
